Changed Form Type and Contained Overflow, Fixed #95

--- a/static/css/friends.css
+++ b/static/css/friends.css
@@ -256,7 +256,6 @@ form input {
   padding: 10px 20px 10px 10px;
   border-top-left-radius: var(--border-radius);
   border-bottom-left-radius: var(--border-radius);
-  flex: 1;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.171); 
 }
 
@@ -266,6 +265,10 @@ form button {
   color: #fff;
   border-top-right-radius: var(--border-radius);
   border-bottom-right-radius: var(--border-radius);
+}
+
+.input-wrapper input {
+  width: 300px;
 }
 
 form button:hover {
@@ -388,17 +391,20 @@ a {
   margin-right: 5px; 
 }
 
-.distance-selector select, .color-selector select {
+.distance-selector select, .color-selector input {
   padding: 5px;
   font-size: 0.9rem; 
   border: 1px solid #ccc; 
-  background-color: #fff; 
   cursor: none;
 }
 
-.color-selector select {
-  padding-left: 10px;
-  width: 78px;
+#id_color {
+  /* flex: 0; */
+  padding: 0;
+  width: 80px !important;
+  height: 2rem;
+  border-radius: 5px;
+  box-shadow: none;
 }
 
 .icon-selector {
